# substrate-and-rust-exercise

./: Cargo.toml  README.md
advanced-lesson-2-kitty/pallets/kitties/: Cargo.toml
advanced-lesson-2-kitty/pallets/kitties/src/: lib.rs
advanced-lesson-2-kitty/runtime/src/: lib.rs
advanced-lesson-3-ui/frontend/: package-lock.json
advanced-lesson-3-ui/frontend/src/: Kitties.js  KittyCards.js
advanced-lesson-4-ocw/assignment/pallets/ocw-demo/src/: lib.rs
advanced-lesson-5/erc20/: lib.rs
advanced-lesson-6-benchmark/pallets/template/src/: benchmarking.rs  lib.rs
advanced-lesson-6-benchmark/runtime/src/: lib.rs
lesson-3/: .gitignore  README.md
lesson-3/src/: main.rs
lesson-4/: Cargo.toml
lesson-4/src/: main.rs
lesson-5/pallets/erc20/: Cargo.toml
lesson-5/pallets/erc20/src/: lib.rs
lesson-5/runtime/: Cargo.toml
lesson-6/pallets/poe/: Cargo.toml
lesson-6/pallets/poe/src/: lib.rs  mock.rs  tests.rs
lesson-6/runtime/: Cargo.toml
lesson-6/runtime/src/: lib.rs
