[package]
authors = ['yammyxing']
description = 'erc20 pallet'
edition = '2018'
license = 'Unlicense'
name = 'pallet-erc20'
version = '2.0.0-rc5'

[package.metadata.docs.rs]
targets = ["x86_64-unknown-Linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "1.3.1", default-features = false, features = ["derive"]}

[dependencies.frame-support]
default-features=false
git ='https:/github.com/paritytech/substrate.git'
tag ='v2.0.0-rc5'
version='2.0.0-rc5'

[dependencies.frame-system]
default-features=false
git = 'https://github.com/paritytech/substrate.git'
tag ='v2.0.0-rc5'
version='2.0.0-rc5'

[dev-dependencies.sp-core]
default-features = false
git='https://github.com/paritytech/substrate.git'
tag='v2.0.0-rc5'
version = '2.0.0-rc5'

[dev-dependencies.sp-io]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
tag = 'v2.0.0-rc5'
version = '2.0.0-rc5'

[dependencies.sp-runtime]
default-features = false
git ='https://github.com/paritytech/substrate.git'
tag ='v2.0.0-rc5'
version = '2.0.0-rc5'

[dependencies.sp-std]
default-features = false
git ='https://github.com/paritytech/substrate.git'
tag ='v2.0.0-rc5'
version = '2.0.0-rc5'

[features]
default = ['std']
std = [
    'codec/std',
    'frame-support/std',
    'frame-system/std'
]
